--- a/rebar.config
+++ b/rebar.config
@@ -1,7 +1,8 @@
 {sub_dirs, ["apps/*", "rel"]}.
 {erl_opts, [{parse_transform, lager_transform}, no_debug_info, native]}.
 {deps, [
-	{ecomponent, ".*", {git, "git://github.com/pepeyuilop/ecomponent.git", {tag, "1.0.0"}}},
+	{confetti, ".*", {git, "https://github.com/jtendo/confetti.git", master}},
+	{ecomponent, ".*", {git, "https://github.com/artefactop/ecomponent.git", {tag, "1.0.0"}}},
 	{covertool,".*", {git, "https://github.com/idubrov/covertool.git", master}}
 ]}.
 {cover_enabled, true}.
