--- a/rebar.config
+++ b/rebar.config
@@ -1,8 +1,7 @@
 {sub_dirs, ["apps/*", "rel"]}.
 {erl_opts, [{parse_transform, lager_transform}, no_debug_info, native]}.
 {deps, [
-	{confetti, ".*", {git, "https://github.com/jtendo/confetti.git", master}},
-	{ecomponent, ".*", {git, "https://github.com/artefactop/ecomponent.git", {tag, "1.0.0"}}},
+	{ecomponent,".*", {git,"https://github.com/artefactop/ecomponent.git", "f690a8dc8c4fed6d2c9d190aacd5420d91b58fc1"}},
 	{covertool,".*", {git, "https://github.com/idubrov/covertool.git", master}}
 ]}.
 {cover_enabled, true}.
