Revert "Change vars.config"
This reverts commit 7b29ab4777144834b55c6cde785a061e259416f6.

--- a/rel/vars.config
+++ b/rel/vars.config
@@ -9,7 +9,7 @@
 %%
 %% etc/app.config
 %%
-{jid_var, $ECOMPONENT_JID}.
+{jid_var,						"relay.server.com"}.
 {xmpp_server_host,		"localhost"}.
 {xmpp_server_port,		8889}.
 {xmpp_server_pass,		"secret"}.
