--- a/rel/vars.config
+++ b/rel/vars.config
@@ -9,7 +9,7 @@
 %%
 %% etc/app.config
 %%
-{jid_var, "relay.xmppdomain"}.
+{jid_var, "relay.server.com"}.
 {xmpp_server_host, "ejabberd.local"}.
 {xmpp_server_port, 8889}.
 {xmpp_server_pass, "secret"}.
