--- a/docker/prod.env
+++ b/docker/prod.env
@@ -1,4 +1,4 @@
 XMPP_DOMAIN=my-hc.nl
-XMPP_PORT=11112
-XMPP_PASS=relaypass
-PUBLIC_IP=130.117.76.198
+JN_XMPP_PORT=11112
+JN_XMPP_PASS=relaypass
+JN_PUBLIC_IP=130.117.76.198
