--- a/docker/prod.env
+++ b/docker/prod.env
@@ -1,4 +1,6 @@
 JN_XMPP_DOMAIN=my-hc.nl
 JN_XMPP_PORT=11112
 JN_XMPP_PASS=relaypass
-JN_PUBLIC_IP=130.117.76.198
+JN_PUBLIC_IP=130.117.76.216
+JN_MIN_PORT=10000
+JN_MAX_PORT=10500
