--- a/rel/vars.config
+++ b/rel/vars.config
@@ -19,7 +19,7 @@
 {redis_port_var, 6379}.
 
 {public_ip_var, "88.88.88.88"}.
-{min_port, 10000}.
-{max_port, 50000}.
+{min_port, MIN_PORT}.
+{max_port, MAX_PORT}.
 {max_per_period, 10}.
 {period_seconds, 60}.
