HC-339 build requires numeric/string vars.config settings, bit fragile, but using for now until better config solution

--- a/rel/vars.config
+++ b/rel/vars.config
@@ -19,7 +19,7 @@
 {redis_port_var, 6379}.
 
 {public_ip_var, "88.88.88.88"}.
-{min_port, MIN_PORT}.
-{max_port, MAX_PORT}.
+{min_port, 10000}.
+{max_port, 10500}.
 {max_per_period, 10}.
 {period_seconds, 60}.
