--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,9 +1,9 @@
 FROM ubuntu:latest
 ENV JENKINS_USER=ahmed@ngti.nl
 ENV JENKINS_TOKEN=00451264e2d21536c0a6088d727855af
-ENV BUILD_VER=master
+ENV BUILD_VER=DOCKER
 RUN apt-get update && apt-get install -y wget
-RUN wget --auth-no-challenge --http-user=$JENKINS_USER --http-password=$JENKINS_TOKEN https://repo.ngti.nl/jenkins/job/jinglenodes-dev/lastSuccessfulBuild/artifact/builds/jinglenodes-${BUILD_VER}.tar.gz
+RUN wget --auth-no-challenge --http-user=$JENKINS_USER --http-password=$JENKINS_TOKEN https://repo.ngti.nl/jenkins/job/jinglenodes-HomeCenter/lastSuccessfulBuild/artifact/builds/jinglenodes-${BUILD_VER}.tar.gz
 RUN tar xf jinglenodes-${BUILD_VER}.tar.gz
 RUN mv rel/jinglenodes /opt/
 ADD configure_jnode.sh /opt/jinglenodes/bin/
