--- a/rebar.config
+++ b/rebar.config
@@ -1,13 +1,14 @@
 {sub_dirs, ["apps/*", "rel"]}.
 {erl_opts, [{parse_transform, lager_transform}, no_debug_info, native]}.
 {deps, [
+	{meck, ".*", {git, "https://github.com/eproxus/meck.git", "0.8.4"}},
 	{ecomponent,".*", {git,"https://github.com/artefactop/ecomponent.git", "f690a8dc8c4fed6d2c9d190aacd5420d91b58fc1"}},
 	{covertool,".*", {git, "https://github.com/idubrov/covertool.git", master}}
 ]}.
 {cover_enabled, true}.
 {cover_print_enable, true}.
  
-{plugins, [rebar_covertool]}.
+{plugins, [rebar_covertool, pc]}.
 {covertool_prefix_len, 2}.
 {cover_export_enabled, true}.
 %{eunit_opts, [verbose, {report, {eunit_surefire, [{dir, "."}]}}]}.
